fixed app layout 100vh and overflow scroll y on mobile

--- a/src/styles/_variables/_fonts.scss
+++ b/src/styles/_variables/_fonts.scss
@@ -30,6 +30,10 @@ p {
     text-transform: uppercase;
 }
 
+.tt-capitalize {
+    text-transform: capitalize;
+}
+
 .fw-bold {
     font-weight: 700;
 }
