--- a/src/styles/app/app.scss
+++ b/src/styles/app/app.scss
@@ -1,5 +1,7 @@
 .App {
     padding-bottom: 100px;
+    height: 100vh;
+    overflow-y: scroll;
 
     @include sm-down() {
         padding-bottom: 50px;
